--- a/{{cookiecutter.name}}/{{cookiecutter.name}}/html/templates/template.html
+++ b/{{cookiecutter.name}}/{{cookiecutter.name}}/html/templates/template.html
@@ -7,16 +7,32 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 {% endraw %}
+
+    {% if cookiecutter.theme == "materializecss" %}
+
     <title>{{cookiecutter.name}} {{ cookiecutter.version }}</title>
-{% raw %}
+
     <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
     <link href="/static/css/materialize.min.css" rel="stylesheet">
 
     <script src="/static/js/jquery-2.1.1.min.js"></script>
     <script src="/static/js/materialize.min.js"></script>
 
-</head>
+    {% elif cookiecutter.theme == "bootstrap" %}
 
+    <link rel="stylesheet" href="/static/css/bootstrap.min.css">
+
+    <script src="/static/js/jquery-3.1.1.min.js"></script>
+    <script src="/static/js/bootstrap.min.js"></script>
+
+
+    {% elif cookiecutter.theme == "bootflat" %}
+
+    {% endif %}
+
+</head>
+{% raw %}
 <body>
 <div class="container">
     {% block content %}
@@ -26,4 +42,5 @@
 
 
 </body>
-</html>{% endraw %}
+{% endraw %}
+</html>
