added semanticui support

--- a/{{cookiecutter.name}}/{{cookiecutter.name}}/html/templates/template.html
+++ b/{{cookiecutter.name}}/{{cookiecutter.name}}/html/templates/template.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-{% endraw %}
+    {% endraw %}
 
     {% if cookiecutter.theme == "materializecss" %}
 
@@ -27,7 +27,11 @@
     <script src="/static/js/bootstrap.min.js"></script>
 
 
-    {% elif cookiecutter.theme == "bootflat" %}
+    {% elif cookiecutter.theme == "semantic_ui" %}
+
+    <script src="/static/js/jquery-3.1.1.min.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.7/semantic.min.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.7/semantic.min.js"></script>
 
     {% endif %}
 
